# but_velodyne_lib

./: .gitignore  CMakeLists.txt  but_velodyne-config.cmake.in
include/: eigen
include/but_velodyne/: AdaptiveIntensitiesNormalization.h  Calibration.h  CollarLinesFilter.h  CollarLinesMap.h  CollarLinesRegistration.h  CollarLinesRegistrationPerPart.h  CollarLinesRegistrationPipeline.h  CollarLinesValidation.h  DenseCloudRegistration.h  EigenUtils.h  FrameCorrectionPerParts.h  InterpolationSE3.h  KittiUtils.h  LineCloud.h  MoveEstimation.h  Origin.h  Overlap.h  PhaseFilter.h  PointCloudLine.h  PolarGridOfClouds.h  RegistrationCrossValidation.h  SlamPlusPlus.h  SubseqRegistration.h  Termination.h  VelodyneMultiFrameSequence.h  VelodynePointCloud.h  VelodyneSpecification.h  Visualizer2D.h  Visualizer3D.h  common.h
scripts/: averageQuaternions.py  calibration_to_graph.py  cross-correlation.py  diff-Rt.py  euler-angles-stats.sh  eval_drift.py  eval_pose_graph.py  filter-corrections-by-dist.py  get_heading.py  halign-transform-compute.py  imu_orientations_extraction.py  imu_orientations_extraction_full.py  invert_poses.py  join.py  join_poses.py  kitti_pose_to_dof.py  matches_to_graph.py  odometry_cnn_data.py  odometry_data_to_hdf5_by_schema_h1.py  odometry_data_to_hdf5_by_schema_h2.py  odometry_data_to_hdf5_by_schema_h5.py  odometry_data_to_hdf5_by_schema_h7.py  odometry_forward_h1_rot.py  odometry_forward_h1_transl.py  odometry_forward_h2_rot.py  odometry_forward_h2_transl.py  odometry_forward_h3_rot.py  odometry_forward_h5_rot.py  odometry_forward_h5_transl.py  odometry_forward_h7_rot.py  odometry_forward_h7_transl.py  pose_graph.py  pose_to_edge.py  poses_pairs_to_graph.py  poses_to_graph.py  poses_to_graph_absolute.py  poses_to_self_edges.py  remove-this.txt  reorder_lines.py  reorder_pose_graph.py  (+14 more)
scripts/CNNs/: add_noise_to_poses.py  kitti_error_stats_posewindows.py  kitti_error_stats_timewindows.py
src/: AdaptiveIntensitiesNormalization.cpp  Calibration.cpp  CollarLinesFilter.cpp  CollarLinesMap.cpp  CollarLinesRegistration.cpp  CollarLinesRegistrationPerPart.cpp  CollarLinesRegistrationPipeline.cpp  CollarLinesValidation.cpp  DenseCloudRegistration.cpp  EigenUtils.cpp  FrameCorrectionPerParts.cpp  InterpolationSE3.cpp  KeypointsCorrespondenceProjector.cpp  KittiUtils.cpp  LineCloud.cpp  MoveEstimation.cpp  Overlap.cpp  PhaseFilter.cpp  PointCloudLine.cpp  PolarGridOfClouds.cpp  PoseGraphEdge.cpp  RegistrationCrossValidation.cpp  SlamPlusPlus.cpp  SubseqRegistration.cpp  Termination.cpp  VelodyneMultiFrameSequence.cpp  VelodynePointCloud.cpp  VelodyneSpecification.cpp  Visualizer2D.cpp  Visualizer3D.cpp  common.cpp
src/apps/: build-3d-model.cpp  calibrate-imu-velodyne-AXXB.cpp  calibrate-imu-velodyne-by-normals.cpp  calibrate-imu-velodyne-evolution.cpp  calibrate-imu-velodyne-manual.cpp  calibrate-imu-velodyne-wall-normals.cpp  calibration-imu-velodyne-manual-two-frames.cpp  clear-long-range-noise.cpp  cloud-eraser.cpp  cloud-intensities-normalization.cpp  cls-reg-subsequences.cpp  cls-reg-to-map-dual.cpp  cls-reg-to-map.cpp  cluster-velodyne-points.cpp  collar-lines-odom.cpp  collar-lines-registration-line-clouds.cpp  collar-lines-registration.cpp  correct-velodyne-distortion-fine.cpp  correct-velodyne-distortion-per-parts.cpp  correct-velodyne-distortion.cpp  error-subframe-regs-bspline.cpp  eval-4recon-crop.cpp  eval-4recon-snapshots.cpp  eval-4recon.cpp  filter-by-angle.cpp  filter-by-phase.cpp  filter-multiframe-overlap.cpp  fit-bsplines-to-registrations.cpp  get-ranges.cpp  gicp.cpp  imu-orientations-extraction.cpp  interpolate-missing-poses.cpp  interpolate-poses.cpp  interpolate-transformation.cpp  join-corrections-and-registrations.cpp  normalize-intensity.cpp  overlaping-cls.cpp  overlaping-dense-clouds.cpp  overlaping-frame-sequences.cpp  overlaping-frames.cpp  (+25 more)
src/apps/tests/: collar-lines-registrations-per-parts-test.cpp
src/demos/: gde-cnn-visualization.cpp
src/tests/: CollarLinesRegistration-test.cpp  RegistrationCrossValidation-test.cpp  SlamPlusPlus-test.cpp  testsuite.cpp
